--- a/styles/map.css
+++ b/styles/map.css
@@ -77,15 +77,22 @@ body {
 
 /* Header et logo */
 .header-carte {
-    min-height: 350px;
-    margin: 0 auto;
-    display: block;
+    min-height: 120px;
+    margin: 0 auto 0.5em auto;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
     position: relative;
-    flex: 1 1 auto;
-    aspect-ratio: 11/8;
+    aspect-ratio: unset;
+    gap: 1.5em;
 }
 .logo-carte {
     box-sizing: border-box;
+    max-height: 90px;
+    height: auto;
+    margin: 0 0.5em;
+    vertical-align: middle;
 }
 
 @media (max-width: 700px) {
@@ -107,13 +114,12 @@ p {
 }
 
 h1 {
-    font-size: 3.2em;
+    font-size: 2.2em;
     font-style: oblique;
     text-align: center;
     color: #22223b;
     letter-spacing: 2px;
-    margin-top: 0.5em;
-    margin-bottom: 0.2em;
+    margin: 0;
     text-shadow: 2px 2px 8px #b5e0e6, 0 1px 0 #fff;
     font-weight: 800;
 }
